# webcam_module

./: .gitignore  Dockerfile  Makefile  README.md  compose.yaml  example.env  pyproject.toml
.github/workflows/: docker-publish.yml  tests.yml
make/: config.mk  docker.mk
scripts/: build.sh  name.sh  script_helper.sh  start.sh  version.sh
src/: webcam_rest_node.py
tests/: test_module.py
tests/workcell_defs/: test_workcell.yaml
tests/workflow_defs/: test_workflow.yaml
